--- a/c10-services/service/src/app/components/card/card.component.html
+++ b/c10-services/service/src/app/components/card/card.component.html
@@ -4,7 +4,7 @@
   placeholder="buscar pokemon">
 
   <div class="card__title">
-    <h3> {{ pokemon.name }} </h3>
+    <h3> {{ pokemon.name | titlecase }} </h3>
   </div>
 
   <div class="card__body">
@@ -15,7 +15,7 @@
   <div class="card__stats">
     <span class="card__stats__type"
      *ngFor="let t of pokemon.types">
-      {{t.type.name}}
+      {{t.type.name | uppercase}}
     </span>
   </div>
 
