feat: Criando Pipes Customizados

--- a/c10-services/service/src/app/components/card/card.component.html
+++ b/c10-services/service/src/app/components/card/card.component.html
@@ -4,7 +4,7 @@
   placeholder="buscar pokemon">
 
   <div class="card__title">
-    <h3> {{ pokemon.name | titlecase }} </h3>
+    <h3> {{ pokemon.name | transformador }} </h3>
   </div>
 
   <div class="card__body">
