--- a/angular-loiane/primeiro-projeto/src/app/cursos/cursos.component.html
+++ b/angular-loiane/primeiro-projeto/src/app/cursos/cursos.component.html
@@ -1,2 +1,11 @@
-<p>cursos components!</p>
+<!-- ESSE TEMPLATE É A NOSSA VIEW O QUE SERÁ MOSTRADO NA TELA-->
+<p>
+  Lista de cursos do portal {{ nomePortal }}
+</p>
 <app-curso-detalhe></app-curso-detalhe>
+
+<ul>
+  <li *ngFor="let curso of cursos">
+      {{ curso }}
+  </li>
+</ul>
