--- a/angular-loiane/data-binding/src/app/data-binding/data-binding.component.css
+++ b/angular-loiane/data-binding/src/app/data-binding/data-binding.component.css
@@ -1,1 +1,8 @@
 @import url("/node_modules/bootstrap/dist/css/bootstrap.min.css");
+
+.high_light{
+  background-color: yellow;
+  font-weight: bold;
+  font-size: 18px;
+  letter-spacing: 2px;
+}
