feat: utilizando Two-way data binding [(ngModel)]

--- a/angular-loiane/data-binding/src/app/data-binding/data-binding.component.html
+++ b/angular-loiane/data-binding/src/app/data-binding/data-binding.component.html
@@ -1,6 +1,6 @@
 <section>
 
-<!--  <article>
+ <!-- <article>
     <h3>Interpolation / Interpolação</h3>
     <p>String renderizada com interpolação: {{ url }}</p>
     <p>Resultado de 1 + 1 é: {{ 1 + 1 }}</p>
@@ -61,9 +61,9 @@
       </div>
     </div>
   </article>
-  <hr> <br><br>-->
+  <hr> <br><br>
 
-  <!-- Event binding-->
+  &lt;!&ndash; Event binding&ndash;&gt;
   <section>
     <h3>Event binding</h3>
     <div>
@@ -71,7 +71,7 @@
           (click) = "botaoClicado()"
           class="btn btn-primary"
           >Me clique!
-      </button><!-- on-click="botaoClicado()" é o angular executa por debaixo dos panos-->
+      </button>&lt;!&ndash; on-click="botaoClicado()" é o angular executa por debaixo dos panos&ndash;&gt;
 
       <br><br>
 
@@ -95,7 +95,9 @@
       </span>
 
     </div>
-  </section>
+  </section>-->
+
+<app-meu-form></app-meu-form>
 
 
 </section>
