feat: reusando componentes com @Input() properties

--- a/angular-loiane/data-binding/src/app/data-binding/data-binding.component.html
+++ b/angular-loiane/data-binding/src/app/data-binding/data-binding.component.html
@@ -97,7 +97,17 @@
     </div>
   </section>-->
 
-<app-meu-form></app-meu-form>
+<!--<app-meu-form></app-meu-form>-->
+  <section class="input-output-properties">
 
+    <article>
+      <h3>Input/Output Properties</h3>
+
+      <app-curso [nome]="nomeDoCurso"></app-curso>
+      <!--
+      Passando informações do data-binding.component  -> para <app-curso></app-curso>
+      -->
+    </article>
+  </section>
 
 </section>
