--- a/angular-loiane/data-binding/src/app/data-binding/data-binding.component.html
+++ b/angular-loiane/data-binding/src/app/data-binding/data-binding.component.html
@@ -107,6 +107,8 @@
       <!--
       Passando informações do data-binding.component  -> para <app-curso></app-curso>
       -->
+
+      <contador></contador>
     </article>
   </section>
 
