--- a/angular-loiane/data-binding/src/app/app.component.html
+++ b/angular-loiane/data-binding/src/app/app.component.html
@@ -1,6 +1,6 @@
 <router-outlet></router-outlet>
-<!-- <app-data-binding></app-data-binding> -->
+ <app-data-binding></app-data-binding>
 
-<app-ciclo [valorInicial]="valor" *ngIf="!deletarCiclo"></app-ciclo>
-<button (click)="mudarValor()">Mudar valor</button>
-<button (click)="destruirCiclo()">Deletar</button>
+<!--<app-ciclo [valorInicial]="valor" *ngIf="!deletarCiclo"></app-ciclo>-->
+<!--<button (click)="mudarValor()">Mudar valor</button>-->
+<!--<button (click)="destruirCiclo()">Deletar</button>-->
