--- a/angular-loiane/data-binding/src/app/output-property/output-property.component.html
+++ b/angular-loiane/data-binding/src/app/output-property/output-property.component.html
@@ -1,8 +1,7 @@
 <div>
 
   <button class="btn btn-primary" (click)="decrementa()">-</button>
-  <input type="text" [value]="valor" readonly>
+  <input type="text" [value]="valor" readonly #campoInput>
   <button class="btn btn-primary" (click)="incrementa()">+</button>
-
 
 </div>
