--- a/angular-loiane/diretivas/src/app/app.component.html
+++ b/angular-loiane/diretivas/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!--<app-diretiva-ngif></app-diretiva-ngif>-->
-<app-diretiva-ngswitch></app-diretiva-ngswitch>
+<!--<app-diretiva-ngswitch></app-diretiva-ngswitch>-->
+<app-diretiva-ng-for></app-diretiva-ng-for>
+
 <router-outlet></router-outlet>
