--- a/angular-loiane/diretivas/src/app/app.component.html
+++ b/angular-loiane/diretivas/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--<app-diretiva-ngif></app-diretiva-ngif>-->
 <!--<app-diretiva-ngswitch></app-diretiva-ngswitch>-->
 <!--<app-diretiva-ng-for></app-diretiva-ng-for>-->
-<app-diretiva-ngclass></app-diretiva-ngclass>
-
+<!--<app-diretiva-ngclass></app-diretiva-ngclass>-->
+<app-diretiva-ngstyle></app-diretiva-ngstyle>
 <router-outlet></router-outlet>
