--- a/angular-loiane/diretivas/src/app/app.component.html
+++ b/angular-loiane/diretivas/src/app/app.component.html
@@ -2,5 +2,7 @@
 <!--<app-diretiva-ngswitch></app-diretiva-ngswitch>-->
 <!--<app-diretiva-ng-for></app-diretiva-ng-for>-->
 <!--<app-diretiva-ngclass></app-diretiva-ngclass>-->
-<app-diretiva-ngstyle></app-diretiva-ngstyle>
+<!--<app-diretiva-ngstyle></app-diretiva-ngstyle>-->
+<app-operador-elvis></app-operador-elvis>
+
 <router-outlet></router-outlet>
