criando diretiva de atributo: (ElementRef | Renderer2)

--- a/angular-loiane/diretivas/src/app/app.component.html
+++ b/angular-loiane/diretivas/src/app/app.component.html
@@ -3,6 +3,22 @@
 <!--<app-diretiva-ng-for></app-diretiva-ng-for>-->
 <!--<app-diretiva-ngclass></app-diretiva-ngclass>-->
 <!--<app-diretiva-ngstyle></app-diretiva-ngstyle>-->
-<app-operador-elvis></app-operador-elvis>
+<!--<app-operador-elvis></app-operador-elvis>-->
+<!--<app-exemplo-ng-content>-->
+<!--  Conteúdo passado para o componente.-->
+<!--  <app-operador-elvis></app-operador-elvis>-->
+<!--</app-exemplo-ng-content>-->
+
+<!--<app-exemplo-ng-content>-->
+<!--  <div class="titulo">Titulo do painel</div>-->
+<!--  <div class="corpo">-->
+<!--    Conteúdo passado para o componente.-->
+<!--  </div>-->
+<!--  <div class="corpo">-->
+<!--    Conteúdo passado para o componente 2.-->
+<!--  </div>-->
+<!--</app-exemplo-ng-content>-->
+
+<app-diretivas-customzadas></app-diretivas-customzadas>
 
 <router-outlet></router-outlet>
