--- a/angular-loiane/diretivas/src/app/diretivas-customzadas/diretivas-customzadas.component.html
+++ b/angular-loiane/diretivas/src/app/diretivas-customzadas/diretivas-customzadas.component.html
@@ -3,3 +3,8 @@
 </p>
 
 <button appFundoAmarelo>Botão com funfo amarelo.</button>
+
+<br><br>
+<p appHightlightMouse>
+  Testo com highlight quando passo o mouse.
+</p>
