diretiva input e propertyBinding

--- a/angular-loiane/diretivas/src/app/diretivas-customzadas/diretivas-customzadas.component.html
+++ b/angular-loiane/diretivas/src/app/diretivas-customzadas/diretivas-customzadas.component.html
@@ -6,5 +6,10 @@
 
 <br><br>
 <p appHightlightMouse>
-  Testo com highlight quando passo o mouse.
+  Texto com highlight quando passo o mouse.
+</p>
+
+<br><br>
+<p [appHighlight]="'grey'" [highLightColor]="'red'">
+  Texto com highlight com cores customizadas.
 </p>
